Fix Map loading
The map loaded not completely and was not centered on the marker. This was fixed by forcing an update on the map. Also the zoom value gets calculated form a search location and applied to the setView of the map.

--- a/frontend/src/app/components/checkout/stagable/stage/shipping/shipping.component.scss
+++ b/frontend/src/app/components/checkout/stagable/stage/shipping/shipping.component.scss
@@ -6,14 +6,14 @@
 
   &.deliverable {
     display: grid;
-    grid-auto-rows: 1fr 4fr;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: $spaceing-xs;
 
     .address {
 
     }
 
     .map {
-      color: black;
     }
   }
 
