--- a/frontend/src/app/components/map/map.component.scss
+++ b/frontend/src/app/components/map/map.component.scss
@@ -1,7 +1,13 @@
 @import '../../../variables.scss';
 
 .map-container {
+  display: flex;
   height: 100%;
   width: 100%;
-  border-radius: $border-radius;
+
+  .map {
+    border-radius: $border-radius;
+    width: 100%;
+    color: black;
+  }
 }
